@@ -22,7 +22,8 @@ You can run the Kafdrop JAR directly, via Docker, or in Kubernetes.
 
 ## Running from JAR
 ```sh
-java -jar target/kafdrop-<version>.jar --zookeeper.connect=<host>:<port>,<host>:<port>,...
+java --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+    -jar target/kafdrop-<version>.jar --zookeeper.connect=<host>:<port>,<host>:<port>,...
 ```
 
 Open a browser and navigate to [http://localhost:9000](http://localhost:9000). The port can be overridden by adding the following config:
